--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  position: relative;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0 0 15rem 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
