--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -1,9 +1,42 @@
-.segment1 {
+.home {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2vh;
+    align-self:first flex-start;
+    justify-self: flex-start;
+}
+
+.segment {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 100vw;
     height: 300px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.a1 {
     background-color: purple;
+}
+
+.a2 {
+    background-color: yellow;
+}
+
+@media (min-width: 768px) {
+    .segment {
+        max-width: 80vw;
+    }
+}
+
+@media (min-width: 1024px) {
+    .segment {
+        margin-left: 3vw;
+        max-width: 90vw;
+    }
 }
