--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -20,6 +20,19 @@ a {
     color: black;
 }
 
+.profile-container {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .a1 {
     background-color: purple;
 }
