--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -24,6 +24,9 @@ a {
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
     overflow: hidden;
 }
 
@@ -33,23 +36,20 @@ a {
     object-fit: cover;
 }
 
-.a1 {
-    background-color: purple;
-}
-
-.a2 {
-    background-color: yellow;
+.aboutme {
+    background: linear-gradient(128deg, rgba(230,115,0,1) 0%, rgba(218,235,0,1) 56%, rgba(237,255,0,1) 100%);
 }
 
 @media (min-width: 768px) {
     .segment {
-        max-width: 80vw;
+        max-width: 85vw;
+        margin-left: 6vw;
     }
 }
 
 @media (min-width: 1024px) {
     .segment {
-        margin-left: 3vw;
-        max-width: 90vw;
+        max-width: 60vw;
+        margin-left: 15vw;
     }
 }
