finished with first draft of aboutme

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../src/img/white-bgn.jpg'); 
+  background-image: url('../src/img/clouds.jpg'); 
   background-repeat: none;
   background-size: cover;
   position: relative;
