--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -1,9 +1,8 @@
-.home {
-    display: flex;
-    flex-direction: row;
-    margin-top: 2vh;
-    align-self:first flex-start;
-    justify-self: flex-start;
+.segment-container {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .segment {
@@ -13,6 +12,13 @@
     justify-content: center;
     max-width: 100vw;
     height: 300px;
+}
+
+.home {
+    display: flex;
+    flex-direction: row;
+    align-self:first flex-start;
+    justify-self: flex-start;
 }
 
 a {
