--- a/src/styling/ThisIsMe.css
+++ b/src/styling/ThisIsMe.css
@@ -1,15 +1,48 @@
 
 .homelink {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-left: 2vw;
     align-self: flex-start;
     justify-self: flex-start;
-    margin-bottom: -24px;
+    margin-bottom: -48px;
 }
 
-.home {
-    margin: 0;
+.homelink-icon {
+    width: 3rem;
+}
+
+.text-container {
+    padding: 2.5rem 0;
+    display: block;
+    align-items: flex-start;
+    background-color: white;
+    border-width: 1px;
+    border-style: outset;
+    border-color: black;
+}
+
+.headline {
+    padding: 0 2rem;
+}
+
+.text {
+    padding: 0 2rem;
+}
+
+.link-container {
+    display: flex;
+    justify-content: center;
+    padding-right: 4rem;
+}
+
+.githubIcon {
+    align-self: center;
+    width: 50px;
+}
+
+.linkedInIcon {
+    width: 50px;
 }
 
 .pdf-viewer {
@@ -23,6 +56,11 @@
         margin-left: 6vw;
         height: 1000px;
     }
+
+    .text-container {
+        max-width: 85vw;
+        margin-left: 6vw;
+    }
 }
 
 @media (min-width: 1024px) {
@@ -30,5 +68,10 @@
         min-width: 60vw;
         margin-left: 15vw;
         height: 1400px;
+    }
+
+    .text-container {
+        max-width: 60vw;
+        margin-left: 15vw;
     }
 }
