--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -46,10 +46,23 @@ a {
     background: linear-gradient(128deg, rgba(230,115,0,1) 0%, rgba(218,235,0,1) 56%, rgba(237,255,0,1) 100%);
 }
 
+.budget-container {
+    height: 100px;
+    width: 100px;
+}
+
+.budget-icon {
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 768px) {
     .segment {
         max-width: 85vw;
         margin-left: 6vw;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        border-bottom: 1px solid black;
     }
 }
 
@@ -57,5 +70,8 @@ a {
     .segment {
         max-width: 60vw;
         margin-left: 15vw;
+        border-left: 1px solid black;
+        border-bottom: 1px solid black;
+        border-right: 1px solid black;
     }
 }
