--- a/src/styling/ThisIsMe.css
+++ b/src/styling/ThisIsMe.css
@@ -30,10 +30,18 @@
     padding: 0 2rem;
 }
 
-.link-container {
-    display: flex;
-    justify-content: center;
-    padding-right: 4rem;
+.link {
+    padding: 0 0.5rem;
+}
+
+.downloadPDF-icon {
+    height: 2rem;
+}
+
+.socialLink-container {
+    display: block;
+    justify-content: flex-start;
+    padding: 2rem 0 0 1.5rem;
 }
 
 .githubIcon {
@@ -45,10 +53,39 @@
     width: 50px;
 }
 
+.downloadLinks-container{
+    margin: 2rem 0;
+}
+
+.downloadable {
+    display: block;
+    font-weight: 600;
+    padding-left: 2rem;
+}
+
+.downloadName {
+    display: inline-block;
+    padding-left: 1rem;
+}
+
 .pdf-viewer {
     min-width: 100vw;
     height: 700px;
 }
+
+.homeLink-bottomPage-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 12vh 0 0 0;
+}
+
+.homelink-bottomPage {
+    width: 10rem;
+}
+
+
 
 @media (min-width: 768px) {
     .pdf-viewer {
@@ -60,6 +97,10 @@
     .text-container {
         max-width: 85vw;
         margin-left: 6vw;
+    }
+
+    .homeLink-bottomPage-container {
+        margin: 12vh 1vw 0 0;
     }
 }
 
@@ -73,5 +114,9 @@
     .text-container {
         max-width: 60vw;
         margin-left: 15vw;
+    }
+
+    .homeLink-bottomPage-container {
+        margin: 15vh 2vw 0 0;
     }
 }
