--- a/src/styling/Budget.css
+++ b/src/styling/Budget.css
@@ -1,3 +1,8 @@
-.svelteBudget-container {
+.svelteBudget-frame {
     width: 100%;
+    height: 99.4vh;
+    border: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
