--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -46,7 +46,7 @@ a {
     background: linear-gradient(128deg, rgba(230,115,0,1) 0%, rgba(218,235,0,1) 56%, rgba(237,255,0,1) 100%);
 }
 
-.budget-container {
+.icon-container {
     height: 100px;
     width: 100px;
 }
@@ -54,6 +54,26 @@ a {
 .budget-icon {
     width: 100%;
     height: 100%;
+}
+
+/* .budgetSegment {
+    background: rgb(68,68,68);
+    background: linear-gradient(128deg, rgba(68,68,68,1) 0%, rgba(124,124,124,1) 4%, rgba(230,230,230,1) 11%, rgba(255,255,255,1) 100%);
+} */
+
+.recipeSegment {
+    background: rgb(19,71,0);
+    background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(35,131,0,1) 11%, rgba(123,227,0,1) 56%, rgba(192,253,0,1) 100%);
+}
+
+.gameSegment {
+    background: rgb(0,71,71);
+    background: linear-gradient(128deg, rgba(0,71,71,1) 0%, rgba(0,117,131,1) 9%, rgba(0,222,227,1) 39%, rgba(0,253,237,1) 100%);
+}
+
+.forumSegment {
+    background: rgb(19,71,0);
+    background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(131,0,0,1) 11%, rgba(227,0,0,1) 56%, rgba(253,50,0,1) 100%);
 }
 
 @media (min-width: 768px) {
