--- a/src/styling/StartPage.css
+++ b/src/styling/StartPage.css
@@ -61,7 +61,9 @@ a {
 .aboutme {
     background: linear-gradient(128deg, rgba(230,115,0,1) 0%, rgba(218,235,0,1) 56%, rgba(237,255,0,1) 100%);
 }
-
+.aboutme-segment {
+    background: linear-gradient(128deg, rgba(230,115,0,1) 0%, rgba(218,235,0,1) 56%, rgba(237,255,0,1) 100%);
+}
 .icon-container {
     height: 100px;
     width: 100px;
@@ -76,13 +78,24 @@ a {
     background: rgb(255,234,136);
     background: linear-gradient(128deg, rgba(255,234,136,0.9640231092436975) 0%, rgba(255,240,197,1) 14%, rgba(255,243,204,1) 27%, rgba(255,253,243,1) 36%, rgba(255,255,255,1) 46%);
 } 
+.budgetSegment-inpage {
+    background: rgb(255,234,136);
+    background: linear-gradient(128deg, rgba(255,234,136,0.9640231092436975) 0%, rgba(255,240,197,1) 14%, rgba(255,243,204,1) 27%, rgba(255,253,243,1) 36%, rgba(255,255,255,1) 46%);
+} 
 
 .recipeSegment {
     background: rgb(19,71,0);
     background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(35,131,0,1) 11%, rgba(123,227,0,1) 56%, rgba(192,253,0,1) 100%);
 }
-
+.recipeSegment-inpage {
+    background: rgb(19,71,0);
+    background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(35,131,0,1) 11%, rgba(123,227,0,1) 56%, rgba(192,253,0,1) 100%);
+}
 .gameSegment {
+    background: rgb(0,71,71);
+    background: linear-gradient(128deg, rgba(0,71,71,1) 0%, rgba(0,117,131,1) 9%, rgba(0,222,227,1) 39%, rgba(0,253,237,1) 100%);
+}
+.gameSegment-inpage {
     background: rgb(0,71,71);
     background: linear-gradient(128deg, rgba(0,71,71,1) 0%, rgba(0,117,131,1) 9%, rgba(0,222,227,1) 39%, rgba(0,253,237,1) 100%);
 }
@@ -91,12 +104,19 @@ a {
     background: rgb(19,71,0);
     background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(131,0,0,1) 11%, rgba(227,0,0,1) 56%, rgba(253,50,0,1) 100%);
 }
+.forumSegment-inpage {
+    background: rgb(19,71,0);
+    background: linear-gradient(128deg, rgba(19,71,0,1) 0%, rgba(131,0,0,1) 11%, rgba(227,0,0,1) 56%, rgba(253,50,0,1) 100%);
+}
 
 .upcomingProjectsSegment {
     background: rgb(184,0,193);
     background: linear-gradient(128deg, rgba(184,0,193,0.9640231092436975) 0%, rgba(246,57,255,1) 26%, rgba(249,113,255,1) 43%, rgba(251,172,255,1) 64%, rgba(252,214,254,1) 75%);
 }
-
+.upcomingProjectsSegment-inpage {
+    background: rgb(184,0,193);
+    background: linear-gradient(128deg, rgba(184,0,193,0.9640231092436975) 0%, rgba(246,57,255,1) 26%, rgba(249,113,255,1) 43%, rgba(251,172,255,1) 64%, rgba(252,214,254,1) 75%);
+}
 /* Media queries för större skärmar */
 @media (min-width: 768px) {
     .segment-container {
@@ -120,6 +140,26 @@ a {
         width: 100%; /* Intro har helbredd */
         margin-bottom: 20px;
     }
+    .upcomingProjectsSegment-inpage {
+        margin: 0;
+        width: 100%;
+    }
+    .forumSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .gameSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .budgetSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .aboutme-segment {
+        margin: 0;
+        width: 100vw;
+    }
 }
 
 @media (min-width: 1024px) {
@@ -134,5 +174,26 @@ a {
 
     .intro {
         width: 100%; /* Fortfarande helbredd för större skärmar */
+    }
+
+    .upcomingProjectsSegment-inpage {
+        margin: 0;
+        width: 100%;
+    }
+    .forumSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .gameSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .budgetSegment-inpage {
+        margin: 0;
+        width: 100vw;
+    }
+    .aboutme-segment {
+        margin: 0;
+        width: 100vw;
     }
 }
