--- a/src/styling/ThisIsMe.css
+++ b/src/styling/ThisIsMe.css
@@ -67,56 +67,26 @@
     padding-left: 1rem;
 }
 
-.pdf-viewer {
-    min-width: 100vw;
-    height: 700px;
-}
-
-.homeLink-bottomPage-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 12vh 0 0 0;
-}
-
-.homelink-bottomPage {
-    width: 10rem;
-    margin-bottom: 10vh;
-}
-
 
 
 @media (min-width: 768px) {
-    .pdf-viewer {
-        min-width: 85vw;
-        margin-left: 6vw;
-        height: 1000px;
-    }
 
     .text-container {
         max-width: 85vw;
         margin-left: 6vw;
     }
-
-    .homeLink-bottomPage-container {
-        margin: 12vh 1vw 0 0;
+    .homelink {
+        display: none;
     }
 }
 
 @media (min-width: 1024px) {
-    .pdf-viewer {
-        min-width: 60vw;
-        margin-left: 15vw;
-        height: 1400px;
-    }
 
     .text-container {
         max-width: 60vw;
         margin-left: 15vw;
     }
-
-    .homeLink-bottomPage-container {
-        margin: 15vh 2vw 0 0;
+    .homelink {
+        display: none;
     }
 }
