--- a/src/styling/game.css
+++ b/src/styling/game.css
@@ -1,25 +1,36 @@
 .game-container {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .text-center {
-    margin-left: 15vw;
-    margin-right: 15vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto; /* Centrerar innehållet */
+  padding: 0 2rem;
 }
 
 .game-text {
-    font-family: Georgia, serif;
-    font-weight: 600;
-    color: darkslateblue;
-    text-align: center;
+  font-family: Georgia, serif;
+  font-weight: 600;
+  color: darkslateblue;
+  text-align: center;
+  margin-bottom: 1.5rem;
 }
 
 .game-description-box {
   border-top: 3px solid darkslateblue;
   border-bottom: 3px solid darkslateblue;
-  margin: 8vh 0 2vh 0;
+  margin: 4vh 0 2vh 0;
+  padding: 1rem 0;
+  width: 100%;
+  max-width: 600px;
 }
 
 .info {
@@ -28,69 +39,92 @@
 }
 
 .game-start-button {
-    margin-top: 5vh;
-    background-color: #3DD1E7;
-    border: 0 solid #E5E7EB;
-    box-sizing: border-box;
-    color: #000000;
-    display: flex;
-    font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 700;
-    justify-content: center;
-    line-height: 1.75rem;
-    padding: .75rem 1.65rem;
-    position: relative;
-    text-align: center;
-    text-decoration: none #000000 solid;
-    text-decoration-thickness: auto;
-    width: 100%;
-    max-width: 460px;
-    position: relative;
-    cursor: pointer;
-    transform: rotate(-2deg);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+  margin-top: 5vh;
+  background-color: #3DD1E7;
+  border: 0 solid #E5E7EB;
+  color: #000000;
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+  padding: .75rem 1.65rem;
+  max-width: 460px;
+  width: 100%;
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  position: relative;
 }
-    
-.game-start-button:focus {
-      outline: 0;
-    }
-    
-    .game-start-button:after {
-      content: '';
-      position: absolute;
-      border: 1px solid #000000;
-      bottom: 4px;
-      left: 4px;
-      width: calc(100% - 1px);
-      height: calc(100% - 1px);
-    }
-    
-    .game-start-button:hover:after {
-      bottom: 2px;
-      left: 2px;
-    }
-    
-    @media (min-width: 768px) {
-        .game-start-button {
-        padding: .75rem 3rem;
-        font-size: 1.25rem;
-      }
-    }
-    @media (min-width: 1900px) {
-      .game-start-button {
-        margin-left: 1vw;
-      }
-    }
-    @media (min-width: 2000px) {
-      .game-start-button {
-        margin-left: 2vw;
-      }
-    }
-    @media (min-width: 2300px) {
-      .game-start-button {
-        margin-left: 3vw;
-      }
-    }
+
+.game-start-button:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+.game-start-button:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+
+.profile-container {
+  margin-bottom: 3rem;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  overflow: hidden;
+}
+
+.profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .text-center {
+      max-width: 700px;
+      padding: 0 1rem;
+      margin: 0 auto;
+  }
+
+  .game-description-box {
+      max-width: 600px;
+  }
+
+  .game-start-button {
+      font-size: 1.25rem;
+      padding: 1rem 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .text-center {
+      max-width: 800px;
+      padding: 0 1rem;
+      margin: 0 15vw 0 0; 
+  }
+
+  .game-description-box {
+      max-width: 650px;
+  }
+
+  .game-start-button {
+      max-width: 500px;
+  }
+}
+
+@media (min-width: 1300px) {
+
+  .text-center {
+    max-width: 80vw;
+    padding: 0 1rem;
+    margin: 0 12vw 0 0; 
+}
+}
